--- a/styles/projects.css
+++ b/styles/projects.css
@@ -9,7 +9,6 @@ section {
   right: 0;
   left: 250px;
   width: 65%;
-  transform: rotate(25deg)
 }
 
 a {
@@ -31,10 +30,14 @@ body {
   overflow: inherit;
 }
 
-#cases, #takeaways, #launch, #prototype, #research, #process, #summary {
+#cases, #takeaways, #launch, #prototype, #branding, #research, #process, #summary {
   margin-left: 50px;
   margin-right: 50px;
   color: #6F6F6F;
+}
+
+#cases {
+  padding-top: 5rem;
 }
 
 img {
@@ -49,6 +52,78 @@ li {
   display: list-item;
 }
 
+#zoom {
+    transition: transform .2s; /* Animation */
+}
+
+#zoom:hover {
+    transform: scale(2.1);
+}
+
+#shake img:hover {
+  animation: shake 1s;
+
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+}
+
+#blink {
+  animation: blinker 1s linear infinite;
+  color: #3B819D;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: .2;
+  }
+}
+
+#pieChart {
+  width: 50%;
+  margin: auto;
+}
+
+.video-responsive{
+  clear: both;
+  position:relative;
+  left:0;
+  right: 0;
+  margin: auto;
+}
+
+.video-responsive iframe{
+
+
+}
+
+/* images */
+.sketches {
+  display: block;
+  clear: both;
+}
+.one-seventh {
+  width: 13.8%;
+}
+
+img .one-fourth {
+  width: 100%
+  padding: 1rem;
+}
 
 @media screen and (max-width: 600px) {
   .hero {
@@ -58,7 +133,7 @@ li {
     width: 100%;
   }
 
-  #cases, #takeaways, #launch, #prototype, #research, #process, #summary {
+  #cases, #takeaways, #launch, #prototype, #branding, #research, #process, #summary {
     margin-left: 5px;
     margin-right: 5px;
   }
