Added fintech case study, updated case study page titles, fixed images for digicel on index and other case study pages.

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -57,7 +57,7 @@ li {
 }
 
 #zoom:hover {
-    transform: scale(2.1);
+    transform: scale(1.5);
 }
 
 #shake img:hover {
@@ -120,6 +120,10 @@ li {
   width: 13.8%;
 }
 
+.one-fourth {
+  width: 23%;
+}
+
 img .one-fourth {
   width: 100%
   padding: 1rem;
@@ -145,5 +149,9 @@ img .one-fourth {
   .bg-img img {
     top: 155px;
     left: 175px;
+  }
+
+  #zoom:hover {
+    transform: scale(1.0);
   }
 }
