rewrote about me section and removed one image. changed layout to the right side.

--- a/styles/main.css
+++ b/styles/main.css
@@ -15,7 +15,7 @@ html {
   background-repeat: no-repeat;
   background-position-y: 265px;*/
   width: 60%;
-  top: 10vh;
+  top: 5vh;
   position: absolute;
   margin: auto;
   left: 0;
@@ -101,7 +101,7 @@ header {
 }
 
 .hero h1 {
-  width: 65%;
+  width: 50%;
 }
 
 /* Nav Bar*/
@@ -303,14 +303,16 @@ li {
   margin-left: 50px;
   margin-right: 50px;
   padding-top: 5rem;
+  padding: 20vh 0px;
+
   color: #6F6F6F;
   position: relative;
   z-index: 2;
 }
 
 .about img {
-  width: 100%;
-  padding: 1rem;
+  width: 50%;
+  padding: 0rem;
 }
 
 /*footer*/
